<resources>
    <string name="app_name">DAM2_2425_Actividad1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="cargando">Cargando</string>
    <string name="registro">Registro</string>
    <string name="emailRegistro">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="ya_est_s_registrado_pulsa_aqu">¿Ya estás registrado? Pulsa aquí</string>
    <string name="registrarRegistro">Registrar</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="edad">Edad:</string>
    <string name="tel_fono_movil">Teléfono movil:</string>
    <string name="biograf_a">Biografía:</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="lista_de_perfiles">Lista de Perfiles</string>
    <string name="profiles">Profiles</string>
    <string name="nombre_seleccion">Nombre:</string>
    <string name="apellidos_seleccion">Apellidos:</string>
    <string name="hobbies_seleccion">Hobbies:</string>
    <string name="editar_foto_seleccion">Editar Foto</string>
    <string name="a_adir_imagen_desde_galeria">Añadir imagen desde galeria</string>
    <string name="a_adir_imagen_desde_c_mara">Añadir imagen desde cámara</string>
    <string name="cerrar_sesi_list_perfil">Cerrar sesión</string>
    <string name="ir_a_perfil_desde_list_perfiles">Ir a Perfil</string>
    <string name="nombre_de_usuario">Nombre:</string>
    <string name="apellidos_usuario">Apellidos:</string>
    <string name="hobbies_usuarios">Hobbies:</string>
    <string name="profiles_foto_perfil">Profiles</string>
    <string name="cerrar_sesi_foto_perfil">Cerrar Sesión</string>
    <string name="lista_usuarios">Lista Usuarios</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mostrar">Mostrar</string>
    <string name="hobbies">Hobbies</string>
    <string name="perfiles_mayores_de_35">Perfiles mayores de 35</string>
    <string name="todos_los_perfiles">Todos los Perfiles</string>
</resources>