<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marron"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".home_fragments.FotoPerfilFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="Selected image"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simple_cake"
        android:text="@string/a_adir_imagen_desde_galeria" />

    <Button
        android:id="@+id/btnGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simple_cake"
        android:text="@string/a_adir_imagen_desde_c_mara" />

    <!-- Nuevo botón para ver la lista de usuarios -->
    <Button
        android:id="@+id/btnProfilesFotoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simple_cake"
        android:text="@string/lista_usuarios" />"

    <!-- Nuevo botón para cerrar sesión -->
    <Button
        android:id="@+id/btnCerrarSesionFotoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simple_cake"
        android:text="@string/cerrar_sesi_foto_perfil" />

</LinearLayout>
