<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bici"
    tools:context=".fragments.PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txEmailRegistro"
            android:layout_width="217dp"
            android:layout_height="48dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="40dp"
            android:paddingStart="10dp"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:fontFamily="@font/simple_cake"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/azul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txInicio" />

        <EditText
            android:id="@+id/txContraseñaRegistro"
            android:layout_width="217dp"
            android:layout_height="48dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="21dp"
            android:paddingStart="10dp"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:fontFamily="@font/simple_cake"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:textColorHint="@color/azul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txEmailRegistro" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/simple_cake"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txContraseñaRegistro" />

        <Button
            android:id="@+id/btnRegistrarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/simple_cake"
            android:text="@string/registrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txContraseñaRegistro" />

        <TextView
            android:id="@+id/txInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/simple_cake"
            android:text="@string/inicio_de_sesi_n"
            android:textColor="@color/azul"
            android:textSize="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
