<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marron"
    tools:context=".fragmentsMain.ProfilesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Encabezado o título de la lista -->
        <TextView
            android:id="@+id/txPerfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/simple_cake"
            android:text="@string/lista_de_perfiles"
            android:textColor="@color/azul"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <!-- RecyclerView para mostrar la lista de perfiles -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaPerfiles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/btnIrPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/simple_cake"
            android:text="@string/ir_a_perfil_desde_list_perfiles" />

        <Button
            android:id="@+id/btnCerrarProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/simple_cake"
            android:text="@string/cerrar_sesi_list_perfil" />


    </LinearLayout>

</FrameLayout>
