<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marron"
    tools:context=".home_fragments.SeleccionProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagenSeleccionada"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="76dp"
            android:layout_marginBottom="28dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/nombreUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- NombreUsuario -->
        <TextView
            android:id="@+id/nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/nombre_seleccion"
            android:textColor="@color/azul"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagenSeleccionada" />

        <!-- ApellidosUsuario -->
        <TextView
            android:id="@+id/apellidosUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos_seleccion"
            android:textColor="@color/azul"

            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/nombreUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Hobbies -->
        <TextView
            android:id="@+id/hobbiesUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies_seleccion"
            android:textColor="@color/azul"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/apellidosUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Botón de editar -->
        <Button
            android:id="@+id/editarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/editar_foto_seleccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hobbiesUsuario" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>




