<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfil_bici"
    tools:context=".fragmentsMain.PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txNombrePerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:fontFamily="@font/simple_cake"
            android:hint="@string/nombre"
            android:inputType="text"
            android:minHeight="60dp"
            android:padding="16dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/azul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txApellidosPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:minHeight="60dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="10dp"
            android:fontFamily="@font/simple_cake"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/apellidos"
            android:textColorHint="@color/azul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txNombrePerfil" />

        <EditText
            android:id="@+id/txEdadPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:minHeight="60dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="10dp"
            android:fontFamily="@font/simple_cake"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edad"
            android:textColorHint="@color/azul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txApellidosPerfil" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="28dp"
            android:text="@string/cerrar_sesi_n"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminar" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:text="Guardar"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="16dp"
            android:text="Mostrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="16dp"
            android:text="Eliminar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMostrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>